# allianceauth-mumble-multiverse

./: .coveragerc  .isort.cfg  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: automated-checks.yml
mumbleverse/: __init__.py  admin.py  app_settings.py  apps.py  auth_hooks.py  manager.py  models.py  mumble.json  provider.py  signals.py  tasks.py  urls.py  views.py
mumbleverse/migrations/: 0001_initial.py  0002_mumbleverseserver_mumble_virtual_server_id.py  0003_mumbleverseserver_alliance_access_and_more.py  0004_alter_mumbleverseserveruser_uid_and_more.py  0005_mumbleverseserveractivefilter.py
mumbleverse/templates/mumbleverse/: base.html  index.html  mumbleverse_service_ctrl.html
mumbleverse/tests/: test_access.py
testauth/settings/: local.py
